--- a/views/main.ejs
+++ b/views/main.ejs
@@ -64,7 +64,7 @@
       <img class="ui image" src="/speakers_images/uniconlogo2019.png">
     </div>
     <div class="ui center aligned text container">
-      <a class="item" id="about" href="#about">About</a>
+      <a class="item " id="about" href="#about">About</a>
       <a class="item" id="agenda" href="#agenda">Agenda</a>
       <a class="item" id="speakers" href="#speakers">Speakers</a>
       <a class="item" id="partners" href="#partners">Partners</a>
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="modal">
+  <div class="modal" id="side_bar">
     <div class="modal-content">
       <i class="remove icon"></i>
       <div class="ui list">
@@ -93,6 +93,11 @@
         <div class="item" id="contact">Contact</div>
       </div>
     </div>
+  </div>
+
+  <div class="ui modal" id="promo">
+    <i class="close icon"></i>
+    <img id="promo_image" src="/speakers_images/promo.png">
   </div>
 
   <div class="ui vertical about-section center aligned segment" id="about">
@@ -191,7 +196,10 @@
       </div>
 
       <div class="ui text description container">
-        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui button">UNICON 2018 Video</a>
+        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui animated vertical button">
+          <div class="visible content">UNICON 2018 Video</div>
+          <div class="hidden content"><i class="play icon"></i></div>
+        </a>
       </div>
     </div>
 
@@ -487,10 +495,10 @@
     <div class="ui center aligned equal width content grid container">
       <div class="sixteen wide mobile five wide tablet five wide computer column">
         <div class="ui raised card">
-          <h2>Current Students</h2>
-          <h4>For All Current Students </h4>
+          <h2>Students</h2>
+          <h4>Currently enrolled in any University</h4>
           <h1>S$50</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a class="eb"><h3>Early bird</h3></a>
           <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" tabindex="0">
             <div class="visible content"><h2>Register Now</h2></div>
             <div class="hidden content"><i class="shopping cart icon"></i></div>
@@ -502,7 +510,7 @@
           <h2>Recent Graduates</h2>
           <h4>Class of 2016 Onwards</h4>
           <h1>S$100</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a class="eb"><h3>Early bird</h3></a>
           <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
             <div class="visible content"><h2>Register Now</h2></div>
             <div class="hidden content"><i class="shopping cart icon"></i></div>
@@ -514,7 +522,7 @@
           <h2>Public</h2>
           <h4>Open to all working adults</h4>
           <h1>S$140</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" class="eb"><h3>Early bird</h3></a>
+          <a class="eb"><h3>Early bird</h3></a>
           <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
             <div class="visible content"><h2>Register Now</h2></div>
             <div class="hidden content"><i class="shopping cart icon"></i></div>
