added popup modal

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -196,10 +196,7 @@
       </div>
 
       <div class="ui text description container">
-        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui animated vertical button">
-          <div class="visible content">UNICON 2018 Video</div>
-          <div class="hidden content"><i class="play icon"></i></div>
-        </a>
+        <a href="https://drive.google.com/file/d/1mEfEjaRQDdPGyIjUHsT7ky7E6sDOX9-6/view?usp=sharing" class="arena big ui button">UNICON 2018 Video</a>
       </div>
     </div>
 
