--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -338,27 +338,39 @@
   padding: 3em;
 }
 
+.agenda-section.segment .header.container {
+  margin: 0;
+  position: relative;
+}
+
 .agenda-section.segment .description.container {
   margin: 0;
   position: relative;
   margin-top: 0em;
+
 }
 
 .agenda-section.segment .description.container h3 {
   font-weight: 500;
 }
 
-.agenda-section.segment .header.container {
-  margin-bottom: 4em;
-  position: relative;
+.agenda-section.segment {
+  width: 100%;
+  margin: 0;
+  padding: 3em;
+}
 
+.agenda-section.segment .header.container {
+  margin: 0;
+  position: relative;
 }
 
 .agenda-section.segment .content {
   margin: 0;
   padding: 0;
   position: relative;
-  height: auto;
+  margin-top: 4em;
+  height: 510px;
 }
 
 .agenda-section.segment .content .column {
