--- a/views/main.ejs
+++ b/views/main.ejs
@@ -623,7 +623,8 @@
     </div>
     <div class="eight wide column" id="comment">
       <div class="ui text container">
-        <h4 class="ui inverted header">Brought to you by NES Global</h4>
+        <h4 class="ui inverted header">Brought to you by NUS Entrepreneurship Society</h4>
+          <img class="ui centered image" src="/speakers_images/nes_logo.png">
       </div>
     </div>
     <div class="four wide column" id="social">
