--- a/views/main.ejs
+++ b/views/main.ejs
@@ -35,10 +35,8 @@
                  src="https://www.facebook.com/tr?id=748463218657549&ev=PageView&noscript=1"
     /></noscript>
   <!-- End Facebook Pixel Code -->
-  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/18e5e8207c24a2ac3d1322dfd/2d6a050796a1b885f3e03db8b.js");</script>
 
-
-</head>
+  </head>
 
   <body>
 
@@ -263,9 +261,9 @@
           <img class="ui rounded image" src="/speakers_images/speakers2019/Jupe_Tan.png">
         </div>
         <div class="eight wide mobile four wide tablet four wide computer column">
-          <a href="https://www.linkedin.com/in/jstona/"><i class="linkedin icon"></i></a>
-          <h3 class="info"><div class="name">Jon Stona</div><br>Head of APAC Marketing<br>Stripe</h3>
-          <img class="ui rounded image" src="/speakers_images/speakers2019/Jon_Stona.png">
+          <a href="https://www.linkedin.com/in/yanphun/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">Yan Phun</div><br>COO<br>99.co</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/Yan_Phun.png">
         </div>
       <!--Present Speakers-->
     </div>
@@ -645,6 +643,7 @@
     <script src="scripts/transition.js"></script>
     <script src="scripts/visibility.js"></script>
     <script src="scripts/event.js"></script>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/18e5e8207c24a2ac3d1322dfd/b0b2af28ab12eb69871c85fc6.js");</script>
 </body>
 
 </html>
