added launch campus

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -476,6 +476,9 @@
       <div class="eight wide mobile four wide tablet four wide computer column">
         <a href="https://sponslist.com"><img class="ui image" src="/speakers_images/sponslist.png"></a>
       </div>
+      <div class="eight wide mobile four wide tablet four wide computer column">
+        <a href="https://launchcampus.co"><img class="ui image" src="/speakers_images/launch_campus.png"></a>
+      </div>
     </div>
 
   </div>
