added go to eventbrite

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -498,10 +498,10 @@
           <h2>Students</h2>
           <h4>Currently enrolled in any University</h4>
           <h1>S$50</h1>
-          <a class="eb"><h3>Early bird</h3></a>
+          <a class="eb" id="early_bird"><h3>Early bird</h3></a>
           <a class="ui animated vertical button"  href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch" tabindex="0">
             <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
+            <div class="hidden content">Go to EventBrite</div>
           </a>
         </div>
       </div>
@@ -513,7 +513,7 @@
           <a class="eb"><h3>Early bird</h3></a>
           <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
             <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
+            <div class="hidden content">Go to EventBrite</div>
           </a>
         </div>
       </div>
@@ -525,7 +525,8 @@
           <a class="eb"><h3>Early bird</h3></a>
           <a class="ui animated vertical button" href="https://www.eventbrite.sg/e/unicon-2019-asias-craziest-student-entrepreneurship-conference-tickets-51752259401?aff=ebdssbdestsearch">
             <div class="visible content"><h2>Register Now</h2></div>
-            <div class="hidden content"><i class="shopping cart icon"></i></div>
+            <div class="hidden content">Go to EventBrite</div>
+            <!--<div class="hidden content"><i class="shopping cart icon"></i></div>-->
           </a>
         </div>
       </div>
