--- a/views/main.ejs
+++ b/views/main.ejs
@@ -95,9 +95,10 @@
     </div>
   </div>
 
-  <div class="ui modal" id="promo">
+  <div class="ui basic modal" id="promo">
     <i class="close icon"></i>
-    <img id="promo_image" src="/speakers_images/early_bird_promo.png">
+    <h1 class="ui header">Eligibility Criteria:</h1>
+    <h2 class="ui header">UNICON 2019 Tickets have to be purchased for all arena participants to be eligible for Unicon Arena.</h2>
   </div>
 
   <div class="ui vertical about-section center aligned segment" id="about">
@@ -543,6 +544,10 @@
             <div class="centered image">
               <img class="ui rounded image" src="/speakers_images/arena.jpg">
               <h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>
+              <div class="ui animated button" id="eligibility_criteria">
+                <div class="visible content"><h2>Eligibility</h2></div>
+                <div class="hidden content"><i class="large list icon"></i></div>
+              </div>
               <div class="ui animated button" id="arena_next">
                 <div class="visible content"><h2>Register Now</h2></div>
                 <div class="hidden content"><i class="right arrow icon"></i></div>
