added Davide Fowler

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -266,6 +266,11 @@
           <h3 class="info"><div class="name">Yan Phun</div><br>COO<br>99.co</h3>
           <img class="ui rounded image" src="/speakers_images/speakers2019/Yan_Phun.png">
         </div>
+        <div class="eight wide mobile four wide tablet four wide computer column">
+          <a href="https://www.linkedin.com/in/david-fowler-b8b32268/"><i class="linkedin icon"></i></a>
+          <h3 class="info"><div class="name">David Fowler</div><br>Director<br>PwC Singapore's Venture Hub</h3>
+          <img class="ui rounded image" src="/speakers_images/speakers2019/David_Fowler.png">
+        </div>
       <!--Present Speakers-->
     </div>
 
