added arena pdf file

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -549,10 +549,10 @@
             <div class="centered image">
               <img class="ui rounded image" src="/speakers_images/arena.jpg">
               <h1 class="ui header">BRINGING YOUR START-UP IDEAS TO LIFE</h1>
-              <div class="ui animated button" id="eligibility_criteria">
-                <div class="visible content"><h2>Eligibility</h2></div>
+              <a class="ui animated button" id="eligibility_criteria" href="https://drive.google.com/file/d/1qDzGvaDaEOtWCVBUN2Iqv3oTQHIyjd8V/view?usp=sharing">
+                <div class="visible content"><h2>Details</h2></div>
                 <div class="hidden content"><i class="large list icon"></i></div>
-              </div>
+              </a>
               <div class="ui animated button" id="arena_next">
                 <div class="visible content"><h2>Register Now</h2></div>
                 <div class="hidden content"><i class="right arrow icon"></i></div>
